[workspace]
members = ["programs/*", "cli", "market_making", "commons"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
# anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# anchor-spl = { version = "0.29.0", features = ["metadata"] }
anchor-client = "0.29.0"
clap = "4.3.3"
anyhow = "1.0.71"
shellexpand = "3.1.0"
rust_decimal = "1.31.0"
spl-associated-token-account = "1"
# mpl-token-metadata = "3.0.1"
mpl-token-metadata = "4.1.2"
rand = "0.8.5"
# tokio = "~1.14.1"
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
serde_json = "1.0.48"
serde = "1.0.104"
# solana-transaction-status = "1.16.12"
solana-transaction-status = "1.18.26"
env_logger = "0.9.0"
log = "0.4.17"
bs58 = "0.5.0"
chrono = "0.4.31"
hyper = "0.14.17"
routerify = "3"
ureq = "2.0.0"
bincode = "1.3.3"
commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
