[package]
name = "lb_clmm"
version = "0.8.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lb_clmm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-bpf = []
staging = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
anchor-spl = "0.29.0"
uint = "0.8.5"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
ruint = "1.3.0"
num-traits = "0.2.16"
num-integer = "0.1.45"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.26"
num_enum = "0.7.1"

[dev-dependencies]
proptest = "1.2.0"
rand = "0.7.3"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
async-trait = "0.1.52"
assert_matches = "1.5.0"
# spl-associated-token-account = "1.0.3"
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }
# spl-token = { version = "4", features = ["no-entrypoint"] }
commons = { path = "../../commons" }
bincode = "1.3.3"
